--- a/Crypter.API/appsettings.json
+++ b/Crypter.API/appsettings.json
@@ -1,8 +1,8 @@
 {
    "AllowedHosts": "*",
    "ConnectionStrings": {
-      "DefaultConnection": "host=127.0.0.1;database=crypter;user id=postgres;pwd=CHANGE_ME;",
-      "HangfireConnection": "host=127.0.0.1;database=crypter_hangfire;user id=crypter_hangfire_user;pwd=CHANGE_ME;"
+      "DefaultConnection": "host=192.168.1.141;database=crypter;user id=postgres;pwd=CHANGE_ME;",
+      "HangfireConnection": "host=192.168.1.141;database=crypter_hangfire;user id=crypter_hangfire_user;pwd=CHANGE_ME;"
    },
    "EmailSettings": {
       "Enabled": false,
@@ -14,7 +14,7 @@
    },
    "TransferStorageSettings": {
       "AllocatedGB": 10,
-      "Location": "C:\\CrypterFiles"
+      "Location": "/mnt/crypter_files"
    },
    "HangfireSettings": {
       "Workers": 1
