--- a/Crypter.API/appsettings.json
+++ b/Crypter.API/appsettings.json
@@ -1,7 +1,7 @@
 {
    "AllowedHosts": "*",
    "ConnectionStrings": {
-      "DefaultConnection": "host=192.168.1.141;database=crypter;user id=postgres;pwd=DEFAULT_PASSWORD;",
+      "DefaultConnection": "host=192.168.1.141;database=crypter;user id=crypter_user;pwd=DEFAULT_PASSWORD;",
       "HangfireConnection": "host=192.168.1.141;database=crypter_hangfire;user id=crypter_hangfire_user;pwd=DEFAULT_PASSWORD;"
    },
    "EmailSettings": {
