--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -52,23 +52,23 @@ jobs:
 
     - name: Create Crypter database
       run: |
-         dotnet tool install --global dotnet-ef
-         dotnet tool restore
-         dotnet ef database update -c DataContext -p Crypter.Core -s Crypter.API --connection "host=127.0.0.1:5432;database=crypter;user id=postgres;pwd=DEFAULT_PASSWORD;"
+         sudo apt-get install --yes --no-install-recommends postgresql-client
          export PGPASSWORD=DEFAULT_PASSWORD
+
          psql -h 127.0.0.1 -U postgres <<-EOSQL
+            CREATE DATABASE crypter;
             CREATE USER crypter_user WITH PASSWORD 'DEFAULT_PASSWORD';
+
             REVOKE ALL PRIVILEGES ON DATABASE postgres FROM crypter_user;
             REVOKE ALL PRIVILEGES ON SCHEMA public FROM crypter_user;
-            REVOKE CREATE ON SCHEMA public FROM PUBLIC;
+
+            CREATE SCHEMA IF NOT EXISTS Crypter AUTHORIZATION crypter_user;
+            GRANT CREATE ON schema Crypter TO crypter_user;
          EOSQL
-         psql -h 127.0.0.1 -U postgres --dbname "crypter" <<-EOSQL
-            REVOKE ALL PRIVILEGES ON DATABASE crypter FROM crypter_user;
-            REVOKE ALL PRIVILEGES ON SCHEMA public FROM crypter_user;
-            REVOKE CREATE ON SCHEMA public FROM PUBLIC;
-            GRANT CONNECT ON DATABASE crypter TO crypter_user;
-            ALTER DEFAULT PRIVILEGES FOR USER postgres IN SCHEMA public GRANT SELECT, INSERT, UPDATE, DELETE ON TABLES TO crypter_user;
-         EOSQL
+
+         dotnet tool install --global dotnet-ef
+         dotnet tool restore
+         dotnet ef database update -c DataContext -p Crypter.Core -s Crypter.API --connection "host=127.0.0.1:5432;database=crypter;user id=crypter_user;pwd=DEFAULT_PASSWORD;"
 
     - name: Create Hangfire database
       run: |
@@ -77,6 +77,7 @@ jobs:
           psql -h 127.0.0.1 -U postgres <<-EOSQL
             CREATE DATABASE crypter_hangfire;
             CREATE USER crypter_hangfire_user WITH PASSWORD 'DEFAULT_PASSWORD';
+
             REVOKE ALL PRIVILEGES ON DATABASE crypter FROM crypter_hangfire_user;
             REVOKE ALL PRIVILEGES ON SCHEMA public FROM crypter_hangfire_user;
 
