--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -50,18 +50,25 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore
 
-    - name: Create Crypter database
+    - name: Create databases
+      run: |
+         sudo apt-get install --yes --no-install-recommends postgresql-client
+         export PGPASSWORD=DEFAULT_PASSWORD
+         psql -h 127.0.0.1 -U postgres <<-EOSQL
+            CREATE DATABASE crypter;
+            CREATE DATABASE crypter_hangfire;
+         EOSQL
+
+    - name: Setup Crypter database
       run: |
          sudo apt-get install --yes --no-install-recommends postgresql-client
          export PGPASSWORD=DEFAULT_PASSWORD
 
          psql -h 127.0.0.1 -U postgres <<-EOSQL
-            CREATE DATABASE crypter;
             CREATE USER crypter_user WITH PASSWORD 'DEFAULT_PASSWORD';
 
             GRANT CONNECT ON DATABASE crypter TO crypter_user;
-            REVOKE ALL PRIVILEGES ON DATABASE postgres FROM crypter_user;
-            REVOKE ALL PRIVILEGES ON SCHEMA public FROM crypter_user;
+            REVOKE ALL PRIVILEGES ON DATABASE crypter_hangfire FROM crypter_user;
 
             CREATE SCHEMA IF NOT EXISTS crypter AUTHORIZATION crypter_user;
             GRANT CREATE ON schema crypter TO crypter_user;
@@ -72,17 +79,15 @@ jobs:
          dotnet tool restore
          dotnet ef database update -c DataContext -p Crypter.Core -s Crypter.API --connection "host=127.0.0.1:5432;database=crypter;user id=crypter_user;pwd=DEFAULT_PASSWORD;"
 
-    - name: Create Hangfire database
+    - name: Setup Hangfire database
       run: |
           sudo apt-get install --yes --no-install-recommends postgresql-client
           export PGPASSWORD=DEFAULT_PASSWORD
           psql -h 127.0.0.1 -U postgres <<-EOSQL
-            CREATE DATABASE crypter_hangfire;
             CREATE USER crypter_hangfire_user WITH PASSWORD 'DEFAULT_PASSWORD';
 
             GRANT CONNECT ON DATABASE crypter_hangfire TO crypter_hangfire_user;
             REVOKE ALL PRIVILEGES ON DATABASE crypter FROM crypter_hangfire_user;
-            REVOKE ALL PRIVILEGES ON SCHEMA public FROM crypter_hangfire_user;
 
             CREATE SCHEMA IF NOT EXISTS hangfire AUTHORIZATION crypter_hangfire_user;
             GRANT CREATE ON schema hangfire TO crypter_hangfire_user;
