--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -64,15 +64,15 @@ jobs:
          sudo apt-get install --yes --no-install-recommends postgresql-client
          export PGPASSWORD=DEFAULT_PASSWORD
 
-         psql -h 127.0.0.1 -U postgres <<-EOSQL
+         psql -h 127.0.0.1 -U postgres --dbname "crypter" <<-EOSQL
             CREATE USER crypter_user WITH PASSWORD 'DEFAULT_PASSWORD';
 
-            GRANT CONNECT ON DATABASE crypter TO crypter_user;
-            GRANT USAGE ON SCHEMA public TO crypter_user;
             REVOKE ALL PRIVILEGES ON DATABASE crypter_hangfire FROM crypter_user;
 
+            GRANT CONNECT ON DATABASE crypter TO crypter_user;
             CREATE SCHEMA IF NOT EXISTS crypter AUTHORIZATION crypter_user;
-            GRANT CREATE ON schema crypter TO crypter_user;
+            GRANT CREATE ON SCHEMA crypter TO crypter_user;
+            GRANT USAGE ON SCHEMA public TO crypter_user;
             GRANT USAGE ON SCHEMA crypter TO crypter_user;
          EOSQL
 
@@ -84,15 +84,15 @@ jobs:
       run: |
           sudo apt-get install --yes --no-install-recommends postgresql-client
           export PGPASSWORD=DEFAULT_PASSWORD
-          psql -h 127.0.0.1 -U postgres <<-EOSQL
+          psql -h 127.0.0.1 -U postgres --dbname "crypter_hangfire" <<-EOSQL
             CREATE USER crypter_hangfire_user WITH PASSWORD 'DEFAULT_PASSWORD';
 
-            GRANT CONNECT ON DATABASE crypter_hangfire TO crypter_hangfire_user;
-            GRANT USAGE ON SCHEMA public TO crypter_hangfire_user;
             REVOKE ALL PRIVILEGES ON DATABASE crypter FROM crypter_hangfire_user;
 
+            GRANT CONNECT ON DATABASE crypter_hangfire TO crypter_hangfire_user;
             CREATE SCHEMA IF NOT EXISTS hangfire AUTHORIZATION crypter_hangfire_user;
-            GRANT CREATE ON schema hangfire TO crypter_hangfire_user;
+            GRANT CREATE ON SCHEMA hangfire TO crypter_hangfire_user;
+            GRANT USAGE ON SCHEMA public TO crypter_hangfire_user;
             GRANT USAGE ON SCHEMA hangfire TO crypter_hangfire_user;
           EOSQL
 
