--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -52,6 +52,7 @@ jobs:
 
     - name: Create crypter_user database user
       run: |
+         export PGPASSWORD=DEFAULT_PASSWORD
          psql -h 127.0.0.1 -U postgres --dbname "crypter" <<-EOSQL
             CREATE USER crypter_user WITH PASSWORD 'DEFAULT_PASSWORD';
 
@@ -68,6 +69,7 @@ jobs:
 
     - name: Create crypter_hangfire_user database user
       run: |
+         export PGPASSWORD=DEFAULT_PASSWORD
          psql -h 127.0.0.1 -U postgres --dbname "crypter_hangfire" <<-EOSQL
             CREATE USER crypter_hangfire_user WITH PASSWORD 'DEFAULT_PASSWORD';
 
